--- a/app/src/resources/scss/app.scss
+++ b/app/src/resources/scss/app.scss
@@ -330,9 +330,13 @@ body{
         .avatar-friend-inbox{
           width: 30px;
           height: 30px;
-          border-radius: 50%;
           margin-right: 5px;
           margin-top: 2px;
+          img{
+            border-radius: 50%;
+            width: 100%;
+            height: 100%;
+          }
         }
       }
     }
@@ -455,7 +459,7 @@ body{
     display: block;
   }
   
-}
+
 
 
 
@@ -629,7 +633,9 @@ body{
 .btn-login:hover{
   opacity: 0.6;
 }
-
+#list-user-block .block-user-item.css-select-friend{
+  background-color: #0084ff;
+}
 @keyframes modalFadeIn{
   from {
     opacity: 0;
