--- a/app/src/resources/scss/app.scss
+++ b/app/src/resources/scss/app.scss
@@ -174,12 +174,18 @@ body{
         height: 500px;
         border-radius: 50px;
         animation: modalFadeIn ease 0.5s;
-        .profile-avatar{
-          width: 80px;
-          height: 80px;
-          .my-avatar{
-            width: 100%;
-            height: 100%;
+        .block-my-pro{
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          .profile-avatar{
+            width: 80px;
+            height: 80px;
+            margin-bottom: 16px;
+            .my-avatar{
+              width: 100%;
+              height: 100%;
+            }
           }
         }
         }
@@ -333,6 +339,10 @@ body{
           border-radius: 50%;
           margin-right: 5px;
           margin-top: 2px;
+          .avt-friend{
+            width: 100%;
+            height: 100%;
+          }
         }
       }
     }
@@ -409,6 +419,7 @@ body{
     background-color: #fff;
     border-left: 1px solid #b5b0b0;
     display: none;
+    animation: modalFadeIn2 ease 1.4s;
     .header-profile{
       height: 72.8px;
       border-bottom: solid 1px #b5b0b0;
@@ -455,7 +466,7 @@ body{
     display: block;
   }
   
-}
+
 
 
 
@@ -629,6 +640,16 @@ body{
 .btn-login:hover{
   opacity: 0.6;
 }
+.message-block-default{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  h4{
+    margin: 0;
+  }
+}
+
 
 @keyframes modalFadeIn{
   from {
@@ -638,5 +659,49 @@ body{
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+@keyframes modalFadeIn2{
+  0%{
+    opacity: 0.7;
+    transform: translateX(200px);
+  }
+  10%{
+  }
+  20%{
+    opacity: 1;
+    transform: translateX(0px);
+  }
+  30%{
+    opacity: 0.7;
+    transform: translateX(20px);
+  }
+  40%{
+    opacity: 1;
+    transform: translateX(0px);
+  }
+  50%{
+    opacity: 0.7;
+    transform: translateX(15px);
+  }
+  60%{
+    opacity: 1;
+    transform: translateX(0px);
+  }
+  70%{
+    opacity: 0.7;
+    transform: translateX(10px);
+  }
+  80%{
+    opacity: 1;
+    transform: translateX(0px);
+  }
+  90%{
+    opacity: 0.7;
+    transform: translateX(5px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateX(0);
   }
 }
