--- a/app/src/resources/views/layouts/main.hbs
+++ b/app/src/resources/views/layouts/main.hbs
@@ -16,7 +16,11 @@
 <body>
     <div class="app">
 
-        {{> header}}
+        <div class="left-header">
+            {{> header}}
+
+        </div>
+
 
         <div class="container">
 
