--- a/app/src/resources/scss/app.scss
+++ b/app/src/resources/scss/app.scss
@@ -20,6 +20,15 @@ body{
   max-width: 100%;
   height: 100%;
   padding: 0;
+  margin-left: 10px;
+}
+.left-header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100px;
+  height: 100%;
+  background-color: #f2f2f2;
 }
 #input-name {
   margin: 10px 0px;
@@ -362,16 +371,20 @@ body{
       margin: 12px 0;
       padding: 0 10px;
     }
-    >button{
+    form{
       width: 100%;
-      padding:16px 20px;
-      font-size: 20px;
-      font-weight: 500;
-      background-color: #fff;
-      border: none;
-      i{
+      button{
+        width: 100%;
+        padding:16px 20px;
         font-size: 20px;
+        font-weight: 500;
+        background-color: #fff;
+        border: none;
+        i{
+          font-size: 20px;
+        }
       }
+
     }
     >button:hover{
       background-color: #F0F2F5;
