--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -16,16 +16,7 @@ body {
   width: 100%;
   max-width: 100%;
   height: 100%;
-  padding: 0;
-  margin-left: 10px; }
-
-.left-header {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100px;
-  height: 100%;
-  background-color: #f2f2f2; }
+  padding: 0; }
 
 #input-name {
   margin: 10px 0px; }
